tests/type-errors/move-semantics/adopt_non_reference.cx
struct Resource : @nodrop {
    int data;
};

int main() {
    Resource value = (Resource) {
        .data = 1
    };

    Resource adopted = @unsafe(@adopt(move value));
    adopted.drop();
    return 0;
}

void Resource::drop(this) {
    @leak(this);
}
